fix: Bootstrap carousel slide content overflow when changing slides
* removed no longer needed Desingn View styling adaption that disturbes normal carousel styling

--- a/src/app/shared/cms/components/content-design-view-wrapper/content-design-view-wrapper.component.scss
+++ b/src/app/shared/cms/components/content-design-view-wrapper/content-design-view-wrapper.component.scss
@@ -93,9 +93,3 @@ $design-view-color-include: #ce5399;
     }
   }
 }
-
-// apply design view specific changes to be able to edit all components
-::ng-deep .carousel-inner {
-  // carousel slide item
-  overflow: inherit;
-}
